--- a/.github/workflows/Run-bot.yml
+++ b/.github/workflows/Run-bot.yml
@@ -2,35 +2,37 @@ name: Run Trading Bot
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Run every hour
-  workflow_dispatch:  # Allow manual trigger
+    - cron: '30 * * * *'  # Every hour, every day
+  workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas numpy yfinance requests scikit-learn matplotlib xgboost
 
-    - name: Run trading bot
-      env:
-        NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-      run: python trading_bot.py
+      - name: Run trading bot
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: python trading_bot.py
 
-    - name: Upload charts
-      uses: actions/upload-artifact@v4
-      with:
-        name: charts
-        path: "*.png"
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: trading-bot-output
+          path: |
+            *.csv
+            *.png
+            trading_bot.log
