--- a/.github/workflows/Run-bot.yml
+++ b/.github/workflows/Run-bot.yml
@@ -31,6 +31,17 @@ jobs:
         run: python trading_bot.py
         timeout-minutes: 10
 
+      - name: Notify on failure
+        if: failure()
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage \
+          -d chat_id=${TELEGRAM_CHAT_ID} \
+          -d text="*Trading Bot Failed*\nRun failed or timed out after 10 minutes. Check GitHub Actions logs." \
+          -d parse_mode=Markdown
+
       - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v4
