--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,43 @@
-pandas
-numpy
-yfinance
-requests
-textblob
-scikit-learn
-matplotlib
-pytz
+# --- ליבה ---
+numpy==2.3.2
+pandas==2.3.2
+scikit-learn==1.7.1
+scipy==1.16.1
+matplotlib==3.10.6
+pytz==2025.2
+packaging>=23.1
+
+# --- מודל ML ---
+xgboost==3.0.4
+joblib==1.5.2
+threadpoolctl==3.6.0
+
+# --- דאטה/שווקים ---
+yfinance==0.2.65
+requests==2.32.5
+tzdata==2025.2
+
+# --- תלויות של yfinance (מוצמדות ליציבות) ---
+beautifulsoup4==4.13.5
+curl_cffi==0.13.0
+websockets==15.0.1
+frozendict==2.4.6
+peewee==3.18.2
+platformdirs==4.4.0
+protobuf==6.32.0
+multitasking==0.0.12
+
+# --- תלויות גרפיקה (למניעת שינויי ABI ב-CI) ---
+cycler==0.12.1
+fonttools==4.59.2
+kiwisolver==1.4.9
+pillow==11.3.0
+contourpy==1.3.3
+pyparsing==3.2.3
+
+# --- עזר (תלויות עקיפות נפוצות) ---
+typing_extensions==4.15.0
+six==1.17.0
+soupsieve==2.8
+cffi==1.17.1
+pycparser==2.22
